--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ h1 {
 .dropdown {
     /* Layout Properties */
     position: absolute;
-    top: 75px;
+    top: 108px;
     left: 393px;
 
     /* UI Properties */
@@ -51,19 +51,20 @@ h1 {
 
 .drop-button {
     /* Layout Properties */
-    text-align: left;
+    position: absolute;
+    top: 75px;
+    left: 393px;
     width: 215px;
     height: 34px;
-
     /* UI Properties */
-    background: #FFFFFF 0 0 no-repeat padding-box;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
     border: 1px solid #CCCCCC;
     border-radius: 4px;
     opacity: 1;
-    cursor: pointer;
 }
 
 .drop-text {
+    position: absolute;
     top: 82px;
     left: 405px;
     width: 136px;
@@ -122,8 +123,6 @@ h1 {
 
 .show {display: block;}
 
-
-
 main {
     margin: auto;
     width: 582px;
@@ -135,4 +134,67 @@ main {
     height: 582px;
     width: 582px;
 }
+
+.datepicker {
+    /* Layout Properties */
+    position: absolute;
+    top: 75px;
+    left: 822px;
+    width: 153px;
+    height: 34px;
+    /* UI Properties */
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border: 1px solid #CCCCCC;
+    border-radius: 4px;
+    opacity: 1;
+}
+
+#datepicker-calendar {
+    /* Layout Properties */
+    position: absolute;
+    top: 83px;
+    left: 834px;
+    width: 119px;
+    height: 18px;
+    clear: both;
+    /* UI Properties */
+    text-align: left;
+    /*letter-spacing: NaNpx;*/
+    opacity: 1;
+    font: normal normal normal 14px/18px PT Sans;
+}
+
+.hide {
+    display: none
+}
+
+.datepicker-format {
+    /* Layout Properties */
+    position: absolute;
+    top: 0;
+    left: 53px;
+    width: 67px;
+    height: 18px;
+    /* UI Properties */
+    text-align: left;
+    font: normal normal normal 10px/13px PT Sans;
+    letter-spacing: 0;
+    color: #CCCCCC;
+}
+
+#datepicker {
+    position: absolute;
+    top: 83px;
+    left: 834px;
+    width: 119px;
+    height: 18px;
+    /* UI Properties */
+    font: normal normal normal 14px/18px PT Sans;
+    text-align: left;
+    /*letter-spacing: NaNpx;*/
+    opacity: 1;
+}
+
+
+
 
