--- a/css/styles.css
+++ b/css/styles.css
@@ -56,8 +56,9 @@ h1 {
     left: 393px;
     width: 215px;
     height: 34px;
+
     /* UI Properties */
-    background: #FFFFFF 0% 0% no-repeat padding-box;
+    background: #FFFFFF 0 0 no-repeat padding-box;
     border: 1px solid #CCCCCC;
     border-radius: 4px;
     opacity: 1;
@@ -85,6 +86,7 @@ h1 {
     left: 582px;
     border-width: 5px 5px 0 5px;
     border-color: #000000 transparent transparent transparent;
+
     /* UI Properties */
     width: 0;
     height: 0;
@@ -92,10 +94,6 @@ h1 {
     vertical-align: middle;
     border-style: solid;
 }
-
-/*.drop-button:hover, .drop-button:focus {*/
-/*    background-color: #D8D8D8;*/
-/*}*/
 
 #myInput {
     text-align: left;
@@ -106,8 +104,6 @@ h1 {
     border: 1px solid #CCCCCC;
     border-radius: 4px;
 }
-
-/*#myInput:focus {outline: 3px solid #ddd;}*/
 
 .dropdown-content {
     display: none;
@@ -127,10 +123,40 @@ h1 {
     display: block;
 }
 
-.dropdown a:hover {background-color: #ddd;}
+.dropdown a:hover {
+    background-color: #ddd;
+}
 
 .show {
     display: block;
+}
+
+#tilesEven, #tilesOdd, #orangeCheckers, #yellowCheckers, #start {
+    opacity: 0;
+}
+
+#tilesEven.fade-in, #tilesOdd.fade-in {
+    -webkit-transition: opacity 1s ease-in-out;
+    -moz-transition: opacity 1s ease-in-out;
+    -ms-transition: opacity 1s ease-in-out;
+    -o-transition: opacity 1s ease-in-out;
+    opacity: 1;
+}
+
+#orangeCheckers.fade-in, #yellowCheckers.fade-in {
+    -webkit-transition: opacity 2s ease-in-out;
+    -moz-transition: opacity 2s ease-in-out;
+    -ms-transition: opacity 2s ease-in-out;
+    -o-transition: opacity 2s ease-in-out;
+    opacity: 1;
+}
+
+#start.fade-in {
+    -webkit-transition: opacity 3s ease-in-out;
+    -moz-transition: opacity 3s ease-in-out;
+    -ms-transition: opacity 3s ease-in-out;
+    -o-transition: opacity 3s ease-in-out;
+    opacity: 1;
 }
 
 .datepicker {
@@ -140,6 +166,7 @@ h1 {
     left: 822px;
     width: 153px;
     height: 34px;
+
     /* UI Properties */
     background: #FFFFFF 0% 0% no-repeat padding-box;
     border: 1px solid #CCCCCC;
@@ -155,15 +182,17 @@ h1 {
     width: 119px;
     height: 18px;
     clear: both;
+
     /* UI Properties */
     text-align: left;
-    /*letter-spacing: NaNpx;*/
     opacity: 1;
     font: normal normal normal 14px/18px PT Sans;
 }
 
 .hide {
-    display: none
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s 0.25s, opacity 0.25s linear;
 }
 
 .datepicker-format {
@@ -173,6 +202,7 @@ h1 {
     left: 53px;
     width: 67px;
     height: 18px;
+
     /* UI Properties */
     text-align: left;
     font: normal normal normal 10px/13px PT Sans;
@@ -187,10 +217,10 @@ h1 {
     left: 834px;
     width: 119px;
     height: 18px;
+
     /* UI Properties */
     font: normal normal normal 14px/18px PT Sans;
     text-align: left;
-    /*letter-spacing: NaNpx;*/
     opacity: 1;
 }
 
@@ -201,8 +231,9 @@ h1 {
     left: 393px;
     width: 582px;
     height: 582px;
+
     /* UI Properties */
-    background: #FFFFFF 0% 0% no-repeat padding-box;
+    background: #FFFFFF 0 0 no-repeat padding-box;
     border: 5px solid #0066A1;
     border-radius: 4px;
     opacity: 1;
@@ -215,6 +246,7 @@ h1 {
     left: 654px;
     width: 300px;
     height: 120px;
+
     /* UI Properties */
     background: #FFFFFF 0 0 no-repeat padding-box;
     border: 1px solid #0CCB3F;
@@ -228,14 +260,19 @@ h1 {
     left: 675px;
     width: 258px;
     height: 65px;
+
     /* UI Properties */
     text-align: left;
     font: normal normal bold 50px/65px PT Sans;
-    letter-spacing: 0px;
+    letter-spacing: 0;
     color: #0CCB3F;
     text-transform: uppercase;
     opacity: 1;
     white-space: nowrap;
+}
+
+#start {
+    cursor: pointer;
 }
 
 footer {
@@ -245,6 +282,7 @@ footer {
     left: 0;
     width: 1366px;
     height: 60px;
+
     /* UI Properties */
     background: #0066A1 0 0 no-repeat padding-box;
     opacity: 1;
@@ -257,6 +295,7 @@ h2 {
     left: 602px;
     width: 162px;
     height: 18px;
+
     /* UI Properties */
     text-align: center;
     font: normal normal normal 14px/18px PT Sans;
